tests/integration/snapshots/integration__conformance__n_structure_end_array.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
]
stdout ---

stderr ---
error: expected json value, found `]`
 --> stdin:1:1
  |
1 | ]
  | ^
